updated my solution to task 13 and made it more sustainable

--- a/Task13-Slide-In-On-Scroll/style.css
+++ b/Task13-Slide-In-On-Scroll/style.css
@@ -3,8 +3,6 @@ body {
   font-family: "Nunito";
   text-align: justify;
 }
-.wrapper {
-}
 
 h1 {
   text-align: center;
@@ -18,38 +16,17 @@ h1 {
 .align-left {
   float: left;
   padding: 20px 20px 20px 0px;
+  transition: transform 0.7s, opacity 1s;
+  transition-timing-function: ease-in;
+  transform: translateX(-150%);
+  opacity: 20%;
 }
 
 .align-right {
   float: right;
   padding: 20px 0px 20px 20px;
-}
-
-#first-img {
-  transition: transform 0.5s;
-  transition-timing-function: ease-in;
-  transform: translateX(-150%);
-}
-#second-img {
-  transition: transform 0.5s;
+  transition: transform 0.7s, opacity 1s;
   transition-timing-function: ease-in;
   transform: translateX(150%);
-}
-#third-img {
-  transition: transform 0.5s;
-  transition-timing-function: ease-in;
-  transform: translateX(-150%);
-}
-#fourth-img {
-  transition: transform 0.5s;
-  transition-timing-function: ease-in;
-  transform: translateX(150%);
-}
-#fifth-img {
-  transition: transform 0.5s;
-  transition-timing-function: ease-in;
-  transform: translateX(150%);
-}
-
-.slide-in {
+  opacity: 20%;
 }
